--- a/index.html
+++ b/index.html
@@ -36,10 +36,18 @@
 
 <br>
 
+<h2>Live temp</h2>
+
+<embed src="http://dmiprivateservices.azurewebsites.net/DMIService.svc/temperatures/live" height="500" width="500
+"></embed>
+
+
 <h2>Hent målinger:</h2>
 <div>
 <a href="controllers/gettemperatures.php">Se alle temperaturmålinger</a>
 </div>
+
+
 
 <h2 style="color: red">Link til Dmi mis</h2>
 <a href="https://www.dmi.dk">Dmi</a>
