Rette display størrelsen til ved live temperaturen.

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
 <h2>Live temp</h2>
 
-<embed src="http://dmiprivateservices.azurewebsites.net/DMIService.svc/temperatures/live" height="500" width="500
-"></embed>
+<embed src="http://dmiprivateservices.azurewebsites.net/DMIService.svc/temperatures/live" height="60" width="60"
+></embed>
 
 
 <h2>Hent målinger:</h2>
